--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6127,6 +6127,68 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
   font-weight: 400;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  -webkit-animation: opacity 1s;
+          animation: opacity 1s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.pop-enter-active,
+.pop-leave-active {
+  transition: transform 1s cubic-bezier(0.5, 0, 0.5, 1), opacity 0.4s linear;
+}
+
+.pop-enter,
+.pop-leave-to {
+  opacity: 0;
+  transform: scale(0.3) translateY(-50%);
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.fadeOut {
+  animation: fadeOut forwards 3s;
+  -webkit-animation: fadeOut forwards 3s;
+  -moz-animation: fadeOut forwards 3s;
+  -o-animation: fadeOut forwards 3s;
+  -ms-animation: fadeOut forwards 3s;
+}
+
+.body {
+  font-family: "Raleway", sans-serif;
+}
+
+.c-Induction_header {
+  font-size: 6rem;
+  line-height: 7rem;
+}
+.c-Induction_container {
+  width: 100%;
+}
+.c-Induction_categories_text {
+  font-size: 3rem;
+  line-height: 4rem;
+}
 /*! tailwindcss v2.0.3 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
