--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,3 +2,8 @@
 @import '~@fortawesome/fontawesome-free/scss/regular.scss';
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
 @import '~@fortawesome/fontawesome-free/scss/brands.scss';
+
+@import 'utilitites/transitions.scss';
+@import 'utilitites/animation.scss';
+@import 'utilitites/reset.scss';
+@import 'components/induction.scss';
