--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,4 +6,5 @@
 @import 'utilitites/transitions.scss';
 @import 'utilitites/animation.scss';
 @import 'utilitites/reset.scss';
+@import 'utilitites/colors.scss';
 @import 'components/induction.scss';
