Start of the dashboard

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6543,6 +6543,11 @@ video {
     color: rgba(203, 213, 224, var(--text-opacity));
   }
 }
+button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .bg-theme-blue {
   background: #454555;
 }
@@ -6564,6 +6569,50 @@ video {
 .c-Induction_categories_text {
   font-size: 3rem;
   line-height: 4rem;
+}
+
+.modal--hidden {
+  display: none;
+}
+.modal-container {
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  width: 43rem;
+  margin: 10% auto 0 auto;
+  z-index: 2100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-height: 90%;
+  overflow: auto;
+}
+.modal-header {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+}
+.modal-title {
+  font-size: 1.3rem;
+}
+.modal-buttons {
+  margin-left: auto;
+}
+.modal-body {
+  padding: 0 1rem;
+}
+.modal-footer {
+  padding: 1rem;
+}
+.modal-overlay {
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 2000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 /*! tailwindcss v2.0.3 | MIT License | https://tailwindcss.com */
 
