--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,4 @@
 @import 'utilitites/reset.scss';
 @import 'utilitites/colors.scss';
 @import 'components/induction.scss';
+@import 'components/modals.scss';
