--- a/resources/sass/utilitites/reset.scss
+++ b/resources/sass/utilitites/reset.scss
@@ -370,3 +370,8 @@ video {
         color: rgba(203, 213, 224, var(--text-opacity))
     }
 }
+
+button:focus {
+    outline: none;
+    box-shadow: none;
+}
