Home and answers partially completed. Need a component to add a answer.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6548,6 +6548,10 @@ button:focus {
   box-shadow: none;
 }
 
+.spinner {
+  margin: 2rem auto !important;
+}
+
 .bg-theme-blue {
   background: #454555;
 }
