--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'utilitites/reset.scss';
 @import 'utilitites/colors.scss';
 @import 'utilitites/background.scss';
+@import 'utilitites/inputs.scss';
 
 //Components
 @import 'components/induction.scss';
