--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6784,6 +6784,45 @@ textarea:focus {
     opacity: 1;
   }
 }
+.hero-banner {
+  height: 100vh;
+}
+@media (min-width: 768px) {
+  .hero-banner {
+    height: 60vh;
+  }
+}
+
+.hero-title {
+  font-family: "Montserrat", sans-serif;
+}
+
+.hero-second-title {
+  font-family: "Nunito", sans-serif;
+}
+
+.what-we-do-svg {
+  width: 100%;
+  height: 20rem;
+}
+@media (min-width: 768px) {
+  .what-we-do-svg {
+    width: 40rem;
+    height: 40rem;
+  }
+}
+
+.why-consultpeer-items {
+  width: 100%;
+}
+.why-consultpeer-items :hover > svg {
+  fill: "#FA8186";
+}
+@media (min-width: 768px) {
+  .why-consultpeer-items {
+    width: 31%;
+  }
+}
 /*! tailwindcss v2.0.3 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
@@ -25754,6 +25793,7 @@ select {
 }
 
 .sticky {
+  position: -webkit-sticky;
   position: sticky;
 }
 
@@ -56804,6 +56844,7 @@ h1 {
   }
 
   .sm\:sticky {
+    position: -webkit-sticky;
     position: sticky;
   }
 
@@ -87763,6 +87804,7 @@ h1 {
   }
 
   .md\:sticky {
+    position: -webkit-sticky;
     position: sticky;
   }
 
@@ -118722,6 +118764,7 @@ h1 {
   }
 
   .lg\:sticky {
+    position: -webkit-sticky;
     position: sticky;
   }
 
@@ -149681,6 +149724,7 @@ h1 {
   }
 
   .xl\:sticky {
+    position: -webkit-sticky;
     position: sticky;
   }
 
@@ -180640,6 +180684,7 @@ h1 {
   }
 
   .\32xl\:sticky {
+    position: -webkit-sticky;
     position: sticky;
   }
 
