--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6630,17 +6630,32 @@ textarea:focus {
 }
 .modal-container {
   background: #fff;
-  border-radius: 15px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  width: 43rem;
-  margin: 10% auto 0 auto;
-  z-index: 2100;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  max-height: 90%;
-  overflow: auto;
+  bottom: 0;
+  z-index: 2100;
+}
+@media (min-width: 768px) {
+  .modal-container {
+    border-radius: 15px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    width: 43rem;
+    margin: 10% auto 0 auto;
+    max-height: 90%;
+    overflow: auto;
+    bottom: unset;
+  }
+}
+.modal-overlay {
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 2000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .modal-header {
   display: flex;
@@ -6658,15 +6673,6 @@ textarea:focus {
 }
 .modal-footer {
   padding: 1rem;
-}
-.modal-overlay {
-  background: rgba(0, 0, 0, 0.3);
-  z-index: 2000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
 }
 
 .u-CircleLoader {
@@ -6803,12 +6809,11 @@ textarea:focus {
 
 .what-we-do-svg {
   width: 100%;
-  height: 20rem;
 }
 @media (min-width: 768px) {
   .what-we-do-svg {
-    width: 40rem;
-    height: 40rem;
+    width: 24rem;
+    height: 20rem;
   }
 }
 
